# arango-predictive-maintenance-demo

./: .env.example  .gitignore  CLAUDE.md  DEMO_CHEATSHEET.md  Makefile  PLAN.md  README.md  conftest.py  docs-arango-ai-agentic-ai-suite-natural-language-to-aql-api-.md  docs-arango-ai-agentic-ai-suite-natural-language-to-aql-setu.md  pyproject.toml
backend/: app.py  aql.py  db.py  txt2aql.py
backend/routes/: chat.py  engines.py  fleet.py  health.py  planning.py
backend/tests/: test_connectivity.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_planning.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: ChatPanel.tsx  RulGauge.tsx  RulHistogram.tsx  SensorTrend.tsx
frontend/src/screens/: EngineDetail.tsx  FleetOverview.tsx  ImpactExplorer.tsx  PlanningDashboard.tsx
pipeline/: MAPPING.md  download_data.py  loader.py  scorer.py  scorer_runner.py  synthetic_graph.py
scripts/: check_connection.py  eval_questions.py  get_token.py
