[project]
name = "aerofleet-demo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-arango>=8.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pandas>=2.0",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "faker>=25.0",
    "httpx>=0.27",
    "langchain-arangodb>=0.2",
    "langchain-openai>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]

[tool.hatch.build.targets.wheel]
packages = ["backend", "pipeline"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
